Modified cover photo

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
 
     <div id="main">
         <div class="background">
+			<div class="layer"></div>
             <section id="intro">
-                <div class="layer"></div>
+                
                 <section class="" id="intro_text">
                     THE Full Stack Developer - need a website? I'm your man!
                 </section>
+			</section>
         </div>
           
     </div>
