Added experience and touched up everything

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./assets/css/normalize.css">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:800&display=swap" rel="stylesheet">
 
 </head>
 
@@ -41,11 +41,11 @@
     <div onclick="openNav()" class="fas fa-bars fa-2x" style="margin-left: 5px"></div>
 
     <div id="nav_icons">
-        <a href="#about_me" class="fas fa-address-card fa-2x"></a>
-        <a href="#experience" class="fas fa-briefcase fa-2x"></a>
-        <a href="#portfolio" class="fas fa-laptop-code fa-2x"></a>
-        <a href="#education" class="fas fa-school fa-2x"></a>
-        <a href="#contact" class="fas fa-mail-bulk fa-2x"></a>
+        <a href="#about_me" data-toggle="tooltip" title="About Me" class="fas fa-address-card fa-2x"></a>
+        <a href="#experience" data-toggle="tooltip" title="Experience" class="fas fa-briefcase fa-2x"></a>
+        <a href="#portfolio" data-toggle="tooltip" title="Portfolio" class="fas fa-laptop-code fa-2x"></a>
+        <a href="#education" data-toggle="tooltip" title="Education" class="fas fa-school fa-2x"></a>
+        <a href="#contact" data-toggle="tooltip" title="Contact" class="fas fa-mail-bulk fa-2x"></a>
     </div>
 
     <div id="main">
@@ -60,8 +60,8 @@
         </div>
 
         <!-- About Section -->
-        <section id="about_me">
-            <div class="section_banner">
+        <section id="about_me" style="background-image: url('./assets/images/debut_light.png')">
+            <div class="section_banner")>
                 <h1>About Me</h1>
             </div>
             <p id="bio_text">
@@ -84,57 +84,72 @@
                 <br><br>Outside of work, Matt is a coding hobbyist, reads books, and plays video games, but most
                 importantly, Matt loves spending time with his wife and two dogs. The most important thing to him is
                 supporting his small family, which is why he is so dedicated to maintaining the highest quality of work
-                attainable. </p>
+                attainable.
             </p>
         </section>
 
         <!-- Experience Section -->
-        <section id="experience">
+        <section id="experience" style="background-image: url('./assets/images/stripes-light.png')">
             <div class="section_banner">
                 <h1>Experience</h1>
             </div>
-            <p id="experience_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem maiores aliquid sequi
-                doloribus veritatis! Saepe optio quis consequuntur dolorem, eaque fugit excepturi accusamus, dolore
-                beatae magni autem? Atque ipsum similique ut voluptatibus totam eos laboriosam assumenda reiciendis,
-                odio omnis reprehenderit cupiditate, quae neque incidunt? Impedit non odio suscipit ipsum, obcaecati
-                sint quis facilis rerum magnam facere quibusdam ipsa ratione enim. Quaerat nam sit, voluptatibus
-                mollitia corrupti aut nisi quidem! Eum maxime quisquam dolorem asperiores tenetur dicta, eos assumenda
-                officiis officia voluptas, in ad exercitationem eaque porro autem soluta id sed nesciunt temporibus
-                aperiam! Provident, voluptatibus! Accusantium sit id ex in adipisci rerum, earum provident animi
-                delectus nisi ad corrupti, repellat optio sed eius rem illo dolores cum numquam! Consectetur amet,
-                dignissimos est distinctio ipsam veritatis! Animi dignissimos, vitae tempora beatae, alias hic
-                asperiores molestias ex aspernatur quis ullam cum fugit nulla pariatur aliquam veniam. Cupiditate eaque,
-                in atque repellat assumenda, voluptate distinctio accusantium voluptatibus animi iure, magnam ipsa.
-                Labore velit quam ea assumenda facere esse voluptatem, error dicta dolorem explicabo reiciendis vero
-                dolor tempora? Ea, ipsum. Atque impedit earum voluptatum error, aliquam ullam aliquid? Deleniti nemo,
-                omnis, voluptate, debitis reiciendis iure optio libero fuga adipisci perspiciatis unde natus! Alias
-                provident optio inventore numquam distinctio maiores delectus consectetur, nemo minus, aperiam quas
-                deserunt dicta voluptatibus, sunt modi. Temporibus quis in sit, porro corporis enim deserunt qui eius
-                possimus id exercitationem assumenda ab maxime quaerat voluptatem? Doloremque, odio? Aliquid, nihil qui?
-                Deleniti ratione ad adipisci quo omnis ab a exercitationem ducimus sapiente aliquam culpa, obcaecati
-                amet? Optio voluptatibus dolore quia? Alias iste numquam sit placeat. Labore nobis incidunt maiores
-                molestiae laudantium alias inventore voluptate minima ipsa! Consequatur ducimus veritatis quos
-                architecto similique adipisci, sed nostrum suscipit voluptatibus cumque mollitia nobis fuga molestiae
-                molestias quaerat corrupti delectus eaque accusamus quae non velit dolorum sint voluptatum? Non maxime,
-                repellendus repellat dignissimos inventore a omnis reprehenderit commodi. Animi pariatur eius nihil
-                fugiat aut veniam laudantium distinctio officiis, quia nulla suscipit quam assumenda nisi voluptas earum
-                maiores? Praesentium dolorum nihil numquam maxime quo esse, quidem inventore consequatur laborum aperiam
-                velit, quas autem nam aliquam atque nesciunt eaque sequi quae, dolore corrupti dicta modi sed. Dolorum
-                repudiandae, ipsam id quasi dignissimos officia alias explicabo sed dicta ut asperiores cumque, aut
-                optio et, provident enim inventore! Totam voluptatum iure odit quam commodi? Suscipit iusto animi ut et,
-                excepturi assumenda natus voluptates doloremque ea modi nam non eaque quasi, voluptate vitae, aliquid
-                reiciendis magnam fuga amet inventore? Fugit praesentium consectetur id, quia ab porro unde vel
-                blanditiis saepe assumenda. Voluptatem voluptas quisquam fuga ipsam minima molestias aut odio? Assumenda
-                ducimus, nemo sed nulla quo porro unde doloremque ipsum necessitatibus, optio maxime adipisci! Molestias
-                illo fugit eligendi numquam debitis reprehenderit magnam harum ex odio distinctio quae nesciunt, minima
-                doloribus inventore quibusdam. Eveniet nihil itaque tenetur earum, perferendis autem accusamus veniam in
-                nostrum libero a, perspiciatis commodi porro ipsam explicabo animi optio aspernatur nisi iusto
-                voluptates veritatis? Odit maxime, commodi blanditiis quod minus eos culpa totam, ab fugit recusandae
-                accusamus harum?</p>
+			
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 d-flex align-items-stretch">
+						<div class="card" style="width: 22rem;">
+						  <img src="./assets/images/army.png" class="card-img-top" alt="U.S. Army Logo">
+						  <div class="card-body">
+							<h5 class="card-title">Human Resource Sergeant</h5>
+							<hr>
+							<div class="card-text">
+								<ul>
+									<li> Coordinated and led a team of specialists in accomplishing HR and administrative related tasks. </li>
+									<li> Specialized in performance optimization, crisis management, and consensus/team building. </li>
+									<li> Influenced, organized, led, and delegated authority. </li>
+								</ul>
+							</div>
+						  </div>
+						</div>					
+					</div>
+					<div class="col-md-4 d-flex align-items-stretch">
+						<div class="card" style="width: 22rem;">
+						  <img src="./assets/images/park_place.png" class="card-img-top" alt="Park Place Technologies Logo">
+						  <div class="card-body">
+							<h5 class="card-title">Business Operations Specialist</h5>
+							<hr>
+							<div class="card-text">
+								<ul>
+									<li> Provides guidance, decision support, and coordinates work efforts. </li>
+									<li> Advanced reporting and project work in support of campany performance objectives </li>
+									<li> Subject matter expert on Customer Relationship Management, Finance, Legal, and Operations. </li>
+									<li> Project management and training of the Mergers and Acquisitions team. </li>
+								</ul>
+							</div>
+						  </div>
+						</div>					
+					</div>
+					<div class="col-md-4 d-flex align-items-stretch">
+						<div class="card" style="width: 22rem;">
+						  <img src="./assets/images/morningstar.png" class="card-img-top morningstar" alt="Morningstar Logo">
+						  <div class="card-body">
+							<h5 class="card-title">Managerial Consulting Intern</h5>
+							<hr>
+							<div class="card-text">
+								<ul>
+									<li> Reconstructed and updated entirety of benefits offerings while integrating said information into existing systems. </li>
+									<li> Created and presented new benefits system along with a comprehensive cost-benefit analysis to the head of HR. </li>
+								</ul>
+							</div>
+						  </div>
+						</div>					
+					</div>
+				</div>
+			</div>
         </section>
 
         <!-- Portfolio Section -->
-        <section id="portfolio">
+        <section id="portfolio" style="background-image: url('./assets/images/furley_bg.png')">
             <div class="section_banner">
                 <h1>Portfolio</h1>
             </div>
@@ -168,7 +183,7 @@
         </section>
 
         <!-- Education Section -->
-        <section id="education">
+        <section id="education" style="background-image: url('./assets/images/old_wall.png')">
             <div class="section_banner">
                 <h1>Education</h1>
             </div>
@@ -212,7 +227,7 @@
         </section>
 
         <!-- Contace Me Section -->
-        <section id="contact">
+        <section id="contact" style="background-image: url('./assets/images/bright_squares.png')">
             <div class="section_banner">
                 <h1>Contact Me</h1>
             </div>
