Added Portfolio Section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="#contact" class="fas fa-mail-bulk fa-2x" onclick="closeNav()"> Contact</a>
     </div>
 
-    
+
     <div id="nav_icons">
         <!-- Use the hamburger bars to open the sidenav -->
         <div onclick="openNav()" class="fas fa-bars fa-2x" style="margin-left: 5px"></div>
@@ -61,7 +61,7 @@
 
         <!-- About Section -->
         <section id="about_me" style="background-image: url('./assets/images/debut_light.png')">
-            <div class="section_banner")>
+            <div class="section_banner" )>
                 <h1>About Me</h1>
             </div>
             <p id="bio_text">
@@ -93,59 +93,67 @@
             <div class="section_banner">
                 <h1>Experience</h1>
             </div>
-			
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4 d-flex align-items-stretch">
-						<div class="card" style="width: 22rem;">
-						  <img src="./assets/images/army.png" class="card-img-top" alt="U.S. Army Logo">
-						  <div class="card-body">
-							<h5 class="card-title">Human Resource Sergeant</h5>
-							<hr>
-							<div class="card-text">
-								<ul>
-									<li> Coordinated and led a team of specialists in accomplishing HR and administrative related tasks. </li>
-									<li> Specialized in performance optimization, crisis management, and consensus/team building. </li>
-									<li> Influenced, organized, led, and delegated authority. </li>
-								</ul>
-							</div>
-						  </div>
-						</div>					
-					</div>
-					<div class="col-md-4 d-flex align-items-stretch">
-						<div class="card" style="width: 22rem;">
-						  <img src="./assets/images/park_place.png" class="card-img-top" alt="Park Place Technologies Logo">
-						  <div class="card-body">
-							<h5 class="card-title">Business Operations Specialist</h5>
-							<hr>
-							<div class="card-text">
-								<ul>
-									<li> Provides guidance, decision support, and coordinates work efforts. </li>
-									<li> Advanced reporting and project work in support of campany performance objectives </li>
-									<li> Subject matter expert on Customer Relationship Management, Finance, Legal, and Operations. </li>
-									<li> Project management and training of the Mergers and Acquisitions team. </li>
-								</ul>
-							</div>
-						  </div>
-						</div>					
-					</div>
-					<div class="col-md-4 d-flex align-items-stretch">
-						<div class="card" style="width: 22rem;">
-						  <img src="./assets/images/morningstar.png" class="card-img-top morningstar" alt="Morningstar Logo">
-						  <div class="card-body">
-							<h5 class="card-title">Managerial Consulting Intern</h5>
-							<hr>
-							<div class="card-text">
-								<ul>
-									<li> Reconstructed and updated entirety of benefits offerings while integrating said information into existing systems. </li>
-									<li> Created and presented new benefits system along with a comprehensive cost-benefit analysis to the head of HR. </li>
-								</ul>
-							</div>
-						  </div>
-						</div>					
-					</div>
-				</div>
-			</div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 d-flex align-items-stretch">
+                        <div class="card" style="width: 22rem;">
+                            <img src="./assets/images/army.png" class="card-img-top" alt="U.S. Army Logo">
+                            <div class="card-body">
+                                <h5 class="card-title">Human Resource Sergeant</h5>
+                                <hr>
+                                <div class="card-text">
+                                    <ul>
+                                        <li> Coordinated and led a team of specialists in accomplishing HR and
+                                            administrative related tasks. </li>
+                                        <li> Specialized in performance optimization, crisis management, and
+                                            consensus/team building. </li>
+                                        <li> Influenced, organized, led, and delegated authority. </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex align-items-stretch">
+                        <div class="card" style="width: 22rem;">
+                            <img src="./assets/images/park_place.png" class="card-img-top"
+                                alt="Park Place Technologies Logo">
+                            <div class="card-body">
+                                <h5 class="card-title">Business Operations Specialist</h5>
+                                <hr>
+                                <div class="card-text">
+                                    <ul>
+                                        <li> Provides guidance, decision support, and coordinates work efforts. </li>
+                                        <li> Advanced reporting and project work in support of campany performance
+                                            objectives </li>
+                                        <li> Subject matter expert on Customer Relationship Management, Finance, Legal,
+                                            and Operations. </li>
+                                        <li> Project management and training of the Mergers and Acquisitions team. </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex align-items-stretch">
+                        <div class="card" style="width: 22rem;">
+                            <img src="./assets/images/morningstar.png" class="card-img-top morningstar"
+                                alt="Morningstar Logo">
+                            <div class="card-body">
+                                <h5 class="card-title">Managerial Consulting Intern</h5>
+                                <hr>
+                                <div class="card-text">
+                                    <ul>
+                                        <li> Reconstructed and updated entirety of benefits offerings while integrating
+                                            said information into existing systems. </li>
+                                        <li> Created and presented new benefits system along with a comprehensive
+                                            cost-benefit analysis to the head of HR. </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Portfolio Section -->
@@ -153,33 +161,98 @@
             <div class="section_banner">
                 <h1>Portfolio</h1>
             </div>
-            <pre>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            </pre>
+            <div class="card flex-row flex-wrap" style="width: 90vw;">
+                <img src="./assets/images/noose.jpg" style="width: 10%; height: 10%; margin: auto 10px;"
+                    class="card-img-left" alt="Noose Logo">
+                <div class="card-body">
+                    <h5 class="card-title">Scary Hangman</h5>
+                    <p class="card-text">
+                        A horror themed hangman game. <br>
+                        One of the first websites that I created. <br>
+                        Displays my abilities with HTML, CSS, and Vanilla Javascript
+                    </p>
+                    <a href="https://matt319940.github.io/Word-Guess-Game/" target="_blank"
+                        class="btn btn-primary">Website</a>
+                    <a href="https://github.com/matt319940/Word-Guess-Game" target="_blank"
+                        class="btn btn-primary">GitHub</a>
+                </div>
+            </div>
+            <div class="card flex-row flex-wrap" style="width: 90vw;">
+                <img src="./assets/images/dragon.png"
+                    style="width: 10%; height: 10%; margin: auto 10px; border-radius: 50%" class="card-img-left"
+                    alt="Dragon Logo">
+                <div class="card-body">
+                    <h5 class="card-title">jQuery Fight Game</h5>
+                    <p class="card-text">
+                        A Mortal Kombat themed fighting game. <br>
+                        Displays my abilities with jQuery.
+                    </p>
+                    <a href="https://matt319940.github.io/fighting-game/" target="_blank"
+                        class="btn btn-primary">Website</a>
+                    <a href="https://github.com/matt319940/fighting-game" target="_blank"
+                        class="btn btn-primary">GitHub</a>
+                </div>
+            </div>
+            <div class="card flex-row flex-wrap" style="width: 90vw;">
+                <img src="./assets/images/trivia.png" style="width: 10%; height: 10%; margin: auto 10px;"
+                    class="card-img-left" alt="Trivia Logo">
+                <div class="card-body">
+                    <h5 class="card-title">Trivia Game</h5>
+                    <p class="card-text">
+                        A movie trivia game. <br>
+                        Displays my abilities with timeout and interval functions.
+                    </p>
+                    <a href="https://matt319940.github.io/TriviaGame/" target="_blank"
+                        class="btn btn-primary">Website</a>
+                    <a href="https://github.com/matt319940/TriviaGame" target="_blank"
+                        class="btn btn-primary">GitHub</a>
+                </div>
+            </div>
+            <div class="card flex-row flex-wrap" style="width: 90vw;">
+                <img src="./assets/images/api.png" style="width: 10%; height: 10%; margin: auto 10px;"
+                    class="card-img-left" alt="API Logo">
+                <div class="card-body">
+                    <h5 class="card-title">Gif Display</h5>
+                    <p class="card-text">
+                        Calls the Giphy API to display gifs that play when clicked.<br>
+                        Displays my abilities with API calls.
+                    </p>
+                    <a href="https://matt319940.github.io/Giphy/" target="_blank"
+                        class="btn btn-primary">Website</a>
+                    <a href="https://github.com/matt319940/Giphy" target="_blank"
+                        class="btn btn-primary">GitHub</a>
+                </div>
+            </div>
+            <div class="card flex-row flex-wrap" style="width: 90vw;">
+                <img src="./assets/images/node.png" style="width: 10%; height: 10%; margin: auto 10px;"
+                    class="card-img-left" alt="Node.js Logo">
+                <div class="card-body">
+                    <h5 class="card-title">Liri Node App</h5>
+                    <p class="card-text">
+                        A command line "Siri" like application that takes in commands.<br>
+                        Displays my abilities with command line interface, Node.js, npm, and the built in file system module.
+                    </p>
+                    <a href="https://www.youtube.com/watch?v=BL5p_vmbKmg&feature=youtu.be" target="_blank"
+                        class="btn btn-primary">Video</a>
+                    <a href="https://github.com/matt319940/liri-node-app" target="_blank"
+                        class="btn btn-primary">GitHub</a>
+                </div>
+            </div>
+            <div class="card flex-row flex-wrap" style="width: 90vw;">
+                <img src="./assets/images/bamazon.png" style="width: 10%; height: 10%; margin: auto 10px;"
+                    class="card-img-left" alt="Bamazon Logo">
+                <div class="card-body">
+                    <h5 class="card-title">Bamazon</h5>
+                    <p class="card-text">
+                        A command line "Amazon" like POS application.<br>
+                        Displays my abilities with MySQL database queries.
+                    </p>
+                    <a href="https://www.youtube.com/watch?v=NxinsfuHKmE&feature=youtu.be" target="_blank"
+                        class="btn btn-primary">Video</a>
+                    <a href="https://github.com/matt319940/Bamazon" target="_blank"
+                        class="btn btn-primary">GitHub</a>
+                </div>
+            </div>
         </section>
 
         <!-- Education Section -->
