Added To Education Section

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                                 <div class="card-text">
                                     <ul>
                                         <li> Provides guidance, decision support, and coordinates work efforts. </li>
-                                        <li> Advanced reporting and project work in support of campany performance
-                                            objectives </li>
+                                        <li> Advanced reporting and project work in support of company performance
+                                            objectives. </li>
                                         <li> Subject matter expert on Customer Relationship Management, Finance, Legal,
                                             and Operations. </li>
                                         <li> Project management and training of the Mergers and Acquisitions team. </li>
@@ -260,43 +260,18 @@
             <div class="section_banner">
                 <h1>Education</h1>
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quae eligendi libero qui ad labore
-                quis delectus earum, dicta rem est perferendis tempore, harum error sint quisquam nostrum debitis, ut
-                autem iusto dolores. Accusamus est eos provident tenetur nesciunt non repudiandae assumenda voluptatibus
-                dolorem corporis. Asperiores tenetur doloribus totam labore quisquam nam animi architecto, voluptatibus
-                quia dignissimos dolorem officia illum repudiandae! Maxime voluptates natus minus autem cupiditate.
-                Labore, non. Consequatur nesciunt suscipit molestiae maxime ab. Vitae possimus labore maxime quae
-                accusantium incidunt consectetur, repellat iure similique quisquam fugit aperiam doloremque odit, ipsum
-                iusto, quas saepe. Obcaecati ex enim, quod molestias nihil iusto deserunt, omnis aperiam sint temporibus
-                nam. Obcaecati neque doloribus culpa est, voluptatum, ab quasi sed inventore error corporis reiciendis
-                dolor vero provident, vel officia fuga commodi earum quo nulla illo. Nisi, asperiores impedit doloremque
-                error eligendi minus quidem praesentium doloribus consequuntur optio et, vero voluptas quaerat officiis
-                laboriosam ducimus at possimus aliquid. Excepturi modi magni dolorem necessitatibus at, esse recusandae
-                ea dolorum debitis animi quia adipisci perspiciatis dolor praesentium aperiam minima deleniti magnam
-                illum vitae fuga enim deserunt dicta sed. Architecto cum voluptatem quidem nam earum? Eos molestias
-                consequatur dicta veniam, dignissimos impedit saepe quisquam aut fugit maxime nostrum sunt eius voluptas
-                ipsam illum ipsa ea autem ab reiciendis ex doloremque, tenetur, commodi fugiat. Cumque id ut quasi quis
-                sapiente vel officiis, eum sed atque consectetur facilis, ullam rerum eaque. Assumenda, error? Debitis
-                optio eius vitae dolore odit quasi. Doloremque quibusdam ad dicta. Illum qui minima nulla possimus!
-                Nostrum at porro illo vero nam minima esse accusantium eligendi. Suscipit in, consequatur laboriosam
-                aliquid neque et maxime. Dignissimos aperiam corporis voluptas saepe eos quis architecto. Mollitia
-                provident laboriosam, placeat hic aliquam est omnis sapiente repudiandae sequi repellendus cum,
-                necessitatibus quae accusantium vero temporibus a nobis consequatur. Quidem iure similique ipsum
-                corporis dolorem, minus cupiditate quo fugiat, odit porro sunt aliquid ea quasi natus enim debitis
-                repellendus iusto reiciendis quos esse nisi in impedit et. Nihil architecto quaerat voluptatem ipsa
-                dicta autem facere quod libero ipsum suscipit, magnam earum quidem nostrum nobis ab iure, ipsam veniam
-                eos deleniti. Possimus incidunt voluptatibus corrupti maxime maiores ad quia laboriosam distinctio nam,
-                nisi molestiae eum sint doloremque iure facilis soluta quasi. Quis dolores nam ducimus nemo, ad dolorem
-                rem quam esse officiis facere consequatur incidunt ut quo fugiat aspernatur maxime quos. Accusantium
-                saepe vel magnam itaque neque, cum beatae id. Corporis nihil minima, facere ipsum assumenda sequi
-                consequuntur ea quasi reiciendis adipisci vero dicta perferendis exercitationem tempore doloremque,
-                quaerat, aspernatur quis dolorem ipsa repellendus nostrum dolore dolor non. Impedit repellendus
-                laboriosam quae dolorum neque eligendi, quaerat sequi distinctio earum? Qui, minus consequatur
-                aspernatur alias fugiat dolorum exercitationem pariatur! Eius vero reprehenderit, quod possimus
-                dignissimos perferendis enim dolorum asperiores aliquam repellat sit rerum voluptatibus alias molestias
-                qui vitae corporis labore ex praesentium. Ipsa rerum quibusdam ex itaque dolores repellendus corrupti,
-                veniam non? Non delectus distinctio natus veritatis eos eligendi expedita illo vitae esse nesciunt,
-                corrupti consectetur magni doloribus reiciendis! Voluptates optio cupiditate earum ut.</p>
+            <img src="./assets/images/uic.png" style="border-radius: 50%;" alt="UIC Logo">
+            <h3><b>B.S. In Strategic Management - Aug 2012 to May 2017</b></h3>
+            <h4><i>University of Illinois at Chicago</i></h4>
+            <ul>
+                <li>Graduated Summa Cum Laude with College Honors</li>
+                <li>Cumulative GPA: 3.9/4.0</li>
+                <li>Minor in Psychology</li>
+                <li>Key Takeaways:</li>
+                    <ul>
+                        <li>Project Management; Operations; Supply Chain Management; Internal & External Accounting; Management Consulting; Process Improvement; Training & Development</li>
+                    </ul>
+            </ul>
         </section>
 
         <!-- Contace Me Section -->
