Added to Contact Section

--- a/index.html
+++ b/index.html
@@ -217,10 +217,8 @@
                         Calls the Giphy API to display gifs that play when clicked.<br>
                         Displays my abilities with API calls.
                     </p>
-                    <a href="https://matt319940.github.io/Giphy/" target="_blank"
-                        class="btn btn-primary">Website</a>
-                    <a href="https://github.com/matt319940/Giphy" target="_blank"
-                        class="btn btn-primary">GitHub</a>
+                    <a href="https://matt319940.github.io/Giphy/" target="_blank" class="btn btn-primary">Website</a>
+                    <a href="https://github.com/matt319940/Giphy" target="_blank" class="btn btn-primary">GitHub</a>
                 </div>
             </div>
             <div class="card flex-row flex-wrap" style="width: 90vw;">
@@ -230,7 +228,8 @@
                     <h5 class="card-title">Liri Node App</h5>
                     <p class="card-text">
                         A command line "Siri" like application that takes in commands.<br>
-                        Displays my abilities with command line interface, Node.js, npm, and the built in file system module.
+                        Displays my abilities with command line interface, Node.js, npm, and the built in file system
+                        module.
                     </p>
                     <a href="https://www.youtube.com/watch?v=BL5p_vmbKmg&feature=youtu.be" target="_blank"
                         class="btn btn-primary">Video</a>
@@ -249,8 +248,7 @@
                     </p>
                     <a href="https://www.youtube.com/watch?v=NxinsfuHKmE&feature=youtu.be" target="_blank"
                         class="btn btn-primary">Video</a>
-                    <a href="https://github.com/matt319940/Bamazon" target="_blank"
-                        class="btn btn-primary">GitHub</a>
+                    <a href="https://github.com/matt319940/Bamazon" target="_blank" class="btn btn-primary">GitHub</a>
                 </div>
             </div>
         </section>
@@ -268,9 +266,10 @@
                 <li>Cumulative GPA: 3.9/4.0</li>
                 <li>Minor in Psychology</li>
                 <li>Key Takeaways:</li>
-                    <ul>
-                        <li>Project Management; Operations; Supply Chain Management; Internal & External Accounting; Management Consulting; Process Improvement; Training & Development</li>
-                    </ul>
+                <ul>
+                    <li>Project Management; Operations; Supply Chain Management; Internal & External Accounting;
+                        Management Consulting; Process Improvement; Training & Development</li>
+                </ul>
             </ul>
         </section>
 
@@ -278,22 +277,24 @@
         <section id="contact" style="background-image: url('./assets/images/bright_squares.png')">
             <div class="section_banner">
                 <h1>Contact Me</h1>
-            </div>
-            <pre>
+            </div> 
 
+            <br><br>
 
+            <a href="https://www.linkedin.com/in/matthew-kelly01/" target="_blank">
+                <i class="fab fa-linkedin fa-3x"></i>
+            </a>
+            
+            <a href="mailto:matt319940@gmail.com" target="_top">
+                <i class="fas fa-envelope fa-3x"></i>
+            </a>
+            
+            <a href="https://www.facebook.com/matthew.a.kelly.50" target="_blank">
+                <i class="fab fa-facebook-square fa-3x"></i>
+            </a>
 
+            <br><br>
 
-
-
-
-
-
-
-
-
-
-            </pre>
         </section>
 
     </div>
