Touched things up

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="section_banner">
                 <h1>Portfolio</h1>
             </div>
-            <div class="card flex-row flex-wrap" style="width: 90vw;">
+            <div class="card flex-row flex-wrap" style="width: 95%;">
                 <img src="./assets/images/noose.jpg" style="width: 10%; height: 10%; margin: auto 10px;"
                     class="card-img-left" alt="Noose Logo">
                 <div class="card-body">
@@ -177,7 +177,7 @@
                         class="btn btn-primary">GitHub</a>
                 </div>
             </div>
-            <div class="card flex-row flex-wrap" style="width: 90vw;">
+            <div class="card flex-row flex-wrap" style="width: 95%;">
                 <img src="./assets/images/dragon.png"
                     style="width: 10%; height: 10%; margin: auto 10px; border-radius: 50%" class="card-img-left"
                     alt="Dragon Logo">
@@ -193,7 +193,7 @@
                         class="btn btn-primary">GitHub</a>
                 </div>
             </div>
-            <div class="card flex-row flex-wrap" style="width: 90vw;">
+            <div class="card flex-row flex-wrap" style="width: 95%;">
                 <img src="./assets/images/trivia.png" style="width: 10%; height: 10%; margin: auto 10px;"
                     class="card-img-left" alt="Trivia Logo">
                 <div class="card-body">
@@ -208,7 +208,7 @@
                         class="btn btn-primary">GitHub</a>
                 </div>
             </div>
-            <div class="card flex-row flex-wrap" style="width: 90vw;">
+            <div class="card flex-row flex-wrap" style="width: 95%;">
                 <img src="./assets/images/api.png" style="width: 10%; height: 10%; margin: auto 10px;"
                     class="card-img-left" alt="API Logo">
                 <div class="card-body">
@@ -221,7 +221,7 @@
                     <a href="https://github.com/matt319940/Giphy" target="_blank" class="btn btn-primary">GitHub</a>
                 </div>
             </div>
-            <div class="card flex-row flex-wrap" style="width: 90vw;">
+            <div class="card flex-row flex-wrap" style="width: 95%;">
                 <img src="./assets/images/node.png" style="width: 10%; height: 10%; margin: auto 10px;"
                     class="card-img-left" alt="Node.js Logo">
                 <div class="card-body">
@@ -237,7 +237,7 @@
                         class="btn btn-primary">GitHub</a>
                 </div>
             </div>
-            <div class="card flex-row flex-wrap" style="width: 90vw;">
+            <div class="card flex-row flex-wrap" style="width: 95%;">
                 <img src="./assets/images/bamazon.png" style="width: 10%; height: 10%; margin: auto 10px;"
                     class="card-img-left" alt="Bamazon Logo">
                 <div class="card-body">
